refac - custom mode to vagetta, ipv6 & cleanups
- Replace CLI benchmark tooling to vagetta.

- Add Ipv6 support to db service.

--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -1,5 +1,5 @@
 server:
-  address: "0.0.0.0"
+  address: "::"
   port: 8080
   db_path: "/data/database"
   max_payload_size: "100KB"
@@ -8,9 +8,10 @@ server:
       - "http://localhost:3000"
       - "http://127.0.0.1:3000"
       - "http://172.16.5.154:3000"
-  ip_whitelist:
-    - "127.0.0.1"
-    - "172.16.5.154"
+  # ip_whitelist:
+  #   - "127.0.0.1"
+  #   - "::1"
+  #   - "172.16.5.154"
   rate_limit:
     rps: 100_000
     burst: 150_000
