--- a/clients/sdk/frontend/typescript/package.json
+++ b/clients/sdk/frontend/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@progressdb/js",
-  "version": "0.2.0-beta",
+  "version": "0.2.0",
   "description": "ProgressDB frontend TypeScript SDK (compile to JS for npm)",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
