--- a/.github/workflows/release-node-sdk.yml
+++ b/.github/workflows/release-node-sdk.yml
@@ -26,6 +26,12 @@ jobs:
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install; fi
 
+      - name: Extract version from tag
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/sdk-node-v}
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          npm version $VERSION --no-git-tag-version --force
+
       - name: Run tests
         run: npm test || true
 
