--- a/clients/sdk/frontend/reactjs/package.json
+++ b/clients/sdk/frontend/reactjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@progressdb/react",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "React hooks and provider for ProgressDB frontend SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,17 +14,18 @@
     "test:integration": "vitest --dir tests/integration"
   },
   "peerDependencies": {
-    "react": "^16.8 || ^17 || ^18 || ^19"
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@progressdb/js": "^0.2.1"
+    "@progressdb/js": "^0.2.2"
   },
   "devDependencies": {
     "typescript": "^4.9.5",
     "@types/react": "^18.0.0",
     "vitest": "^1.0.0",
     "msw": "^1.2.1",
-    "@testing-library/react": "^13.0.0",
+    "@testing-library/react": "^12.0.0 || ^13.0.0 || ^14.0.0",
     "@testing-library/jest-dom": "^5.16.5"
   },
   
