--- a/clients/sdk/frontend/reactjs/package.json
+++ b/clients/sdk/frontend/reactjs/package.json
@@ -21,15 +21,21 @@
     "@progressdb/js": "^0.2.2"
   },
   "devDependencies": {
-    "typescript": "^4.9.5",
-    "@types/react": "^18.0.0",
-    "vitest": "^1.0.0",
-    "msw": "^1.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.0.0 || ^13.0.0 || ^14.0.0",
-    "@testing-library/jest-dom": "^5.16.5"
+    "@types/react": "^18.0.0",
+    "msw": "^1.2.1",
+    "typescript": "^4.9.5",
+    "vitest": "^1.0.0"
   },
-  
-  "files": ["dist"],
-  "keywords": ["progressdb","react","sdk","hooks"],
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "progressdb",
+    "react",
+    "sdk",
+    "hooks"
+  ],
   "license": "MIT"
 }
