--- a/clients/sdk/frontend/reactjs/package.json
+++ b/clients/sdk/frontend/reactjs/package.json
@@ -14,16 +14,14 @@
     "test:integration": "vitest --dir tests/integration"
   },
   "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@progressdb/js": "^0.2.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.0.0 || ^13.0.0 || ^14.0.0",
-    "@types/react": "^18.0.0",
     "msw": "^1.2.1",
     "typescript": "^4.9.5",
     "vitest": "^1.0.0"
