--- a/clients/sdk/frontend/reactjs/package.json
+++ b/clients/sdk/frontend/reactjs/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "@types/react": "^18.0.0",
     "msw": "^1.2.1",
     "typescript": "^4.9.5",
     "vitest": "^1.0.0"
