--- a/.github/workflows/release-python-sdk.yml
+++ b/.github/workflows/release-python-sdk.yml
@@ -21,6 +21,13 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Extract version from tag
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/sdk-py-v}
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          # Update version in pyproject.toml
+          sed -i.bak "s/version = \".*\"/version = \"$VERSION\"/" pyproject.toml
+
       - name: Install build deps
         run: |
           python -m pip install --upgrade pip setuptools wheel
