--- a/.github/workflows/test-python-sdk.yml
+++ b/.github/workflows/test-python-sdk.yml
@@ -14,15 +14,18 @@ jobs:
   python-sdk:
     name: test-python-sdk
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
     defaults:
       run:
         working-directory: clients/sdk/backend/python
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Python
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: ${{ matrix.python-version }}
       - name: Install & Test
         run: |
           python -m pip install --upgrade pip
